[package]
name = "learning_webrtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bytes = "1.5.0"
env_logger = "0.11.2"
futures = "0.3.30"
http = "1.0.0"
log = "0.4.20"
mediasoup = "0.16.0"
rtcp = "0.10.1"
rtp = "0.10.0"
rustls = "0.22.2"
rustls-pki-types = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tokio-rustls = "0.25.0"
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.21.0"
uuid = { version = "1.7.0", features = ["serde"] }
webpki-roots = "0.26.1"
webrtc = "0.10.0"
webrtc-dtls = "0.9.0"
webrtc-ice = "0.10.1"
webrtc-srtp = "0.11.1"
webrtc-util = "0.8.1"
